--- a/unicorns.html
+++ b/unicorns.html
@@ -4,29 +4,29 @@
   <meta charset="utf-8">
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Unicorns - Wild Rydes</title>
+  <title>G-Dronezz - GSU</title>
 
   <link rel="stylesheet" href="css/font.css">
   <link rel="stylesheet" href="css/main.css">
 
   <script src="js/vendor/modernizr.js"></script>
 </head>
-<body class="page-unicorns">
+<body class="page-drones">
 
   <header class="site-header">
-    <div class="site-logo dark">Wild Rydes</div>
+    <div class="site-logo dark">>G-Dronezz</div>
 
     <div class="row column medium-8 large-6 xlarge-5 xxlarge-4">
-      <h1 class="title">Unicorns Are Our Friends</h1>
+      <h1 class="title">G-Dronezz - Dronezz on demand on GSU</h1>
       <p class="content">
-        The app is what makes this service exist, but the unicorns make it move. Meet them and see who you are riding with!
+        The app is what makes this service exist, but the drones make it move. Meet them and see what you can fly!
       </p>
     </div>
 
     <nav class="site-nav">
       <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="unicorns.html">Meet the Unicorns</a></li>
+        <li><a href="unicorns.html">Meet the Dronez</a></li>
         <li><a href="investors.html">Investors & Board of Directors</a></li>
         <li><a href="faq.html">FAQ</a></li>
         <li><a href="apply.html">Apply</a></li>
@@ -37,28 +37,26 @@
 
   <div class="row column medium-10 large-8 xxlarge-6">
     <p class="content">
-      Wild Rydes has a dedicated staff that recruits, trains, and tends to our herd of unicorns. We take great pride in the quality of unicorns and rydes that we provide to our customers, and our staff exercises the utmost care in vetting the unicorns that join our herd.
+      G-Dronezz has a dedicated technical team maintaining each drones. We take great pride in the quality of the drones that we provide to our customers, and our staff exercises the utmost care in maintaining our drones.
     </p>
 
     <p class="content">
-      Every unicorn goes through a rigorous due diligence process where we perform background checks, flying exams, and several rounds of interviews. Unicorns accepted to Wild Rydes are then treated to the best care and maintenance possible. We provide them excellent benefits, health care, and employee perks. This is part of our company philosophy in which happy unicorns lead to happy customers.
+      Every drone goes through a rigorous due diligence process where we perform several tests. We provide them excellent benefits, health care, and employee perks.
     </p>
-
-    <p class="content">Meet a few of the unicorns that are part of our family.</p>
   </div>
 
-  <section class="unicorns-list">
+  <section class="drones-list">
     <div class="row">
-      <div class="unicorn jimmy">
+      <div class="drone jimmy">
         <div class="columns medium-5 large-6 xlarge-5 xlarge-offset-1">
-          <img src="images/wr-unicorn-one.png" alt="Jimmy Three Legs">
+          <img src="images/wr-drone-one.png" alt="Jimmy Three Legs">
         </div>
 
         <div class="columns medium-7 large-6 xlarge-5 xxlarge-4">
           <h2 class="title">Bucephalus</h2>
           <div class="subtitle">Golden Swiss</div>
           <p class="content">
-            Bucephalus joined Wild Rydes in February 2016 and has been giving rydes almost daily. He says he most enjoys getting to know each of his ryders, which makes the job more interesting for him. In his spare time, Bucephalus enjoys watching sunsets and playing Pokemon Go.
+            some random technical details on the specs of some drome.
           </p>
         </div>
       </div>
@@ -67,14 +65,14 @@
     <div class="row">
       <div class="unicorn henry">
         <div class="columns medium-5 medium-push-7 large-6 large-push-6 xlarge-5 xlarge-offset-1 xlarge-push-5">
-          <img src="images/wr-unicorn-two.png" alt="Hot Shoe Henry">
+          <img src="images/wr-drone-two.png" alt="Hot Shoe Henry">
         </div>
 
         <div class="columns medium-7 medium-pull-5 large-6 large-pull-6 xlarge-5 xlarge-pull-5 xxlarge-4 xxlarge-offset-1">
           <h2 class="title">Shadowfox</h2>
           <div class="subtitle">Brown Jersey</div>
           <p class="content">
-            Shadowfox joined Wild Rydes after completing a distinguished career in the military, where he toured the world in many critical missions. Shadowfox enjoys impressing his ryders with magic tricks that he learned from his previous owner.
+            some random technical details on the specs of some drome.
           </p>
         </div>
       </div>
@@ -102,7 +100,7 @@
       <nav class="footer-nav">
         <ul>
           <li><a href="index.html">Home</a></li>
-          <li><a href="unicorns.html">Meet the Unicorns</a></li>
+          <li><a href="unicorns.html">Meet the Dronez</a></li>
           <li><a href="investors.html">Investors & Board of Directors</a></li>
           <li><a href="faq.html">FAQ</a></li>
           <li><a href="apply.html">Apply</a></li>
@@ -123,3 +121,4 @@
   <script src="js/main.js"></script>
 </body>
 </html>
+
