--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Wild Rydes</title>
+  <title>G-Dronez</title>
 
   <link rel="stylesheet" href="css/font.css">
   <link rel="stylesheet" href="css/main.css">
@@ -14,25 +14,25 @@
 <body class="page-home">
 
   <header class="site-header">
-    <h1 class="title">Wild Rydes</h1>
+    <h1 class="title">G-Dronez</h1>
     <nav class="site-nav">
       <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="unicorns.html">Meet the Unicorns</a></li>
+        <li><a href="drones.html">Meet the Dronez</a></li>
         <li><a href="investors.html">Investors &amp; Board of Directors</a></li>
         <li><a href="faq.html">FAQ</a></li>
         <li><a href="apply.html">Apply</a></li>
       </ul>
     </nav>
     <button type="button" class="btn-menu"><span>Menu</span></button>
-    <a class="home-button" href="/register.html">Giddy Up!</a>
+    <a class="home-button" href="/register.html">Get Flying!</a>
   </header>
 
   <section class="home-about">
     <div class="row column large-9 xlarge-6 xxlarge-4">
       <h2 class="section-title">How Does This Work?</h2>
       <p class="content">
-        In today’s fast paced world, you’ve got places you need to be but not enough time in your jam packed schedule. Wouldn’t it be nice if there were a transportation service that changed the way you get around daily? Introducing Wild Rydes, an innovative transportation service that helps people get to their destination faster and hassle-free. Getting started is as easy as tapping a button in our app.
+        Something something about drones and their advantages
       </p>
     </div>
 
@@ -158,3 +158,4 @@
   <script src="js/main.js"></script>
 </body>
 </html>
+
